<resources>
    <string name="app_name">TestFarma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menú</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_nosotros">Nosotros</string>
    <string name="menu_misdatos">Mis Datos</string>
    <string name="menu_config">Configuración de mi Perfil</string>

    <string name="nos_historia">Testfarma nace para cubrir la necesidad de ir más allá en la venta y distribución de insumos médicos y pruebas de diagnóstico clínico, así como de productos farmacéuticos. Testfarma, es una empresa que brinda además asesoría técnica con profesionales de la salud, para que el cliente pueda implementar efectivamente sus proyectos de diagnóstico, bien sea en el ámbito de la salud laboral y ocupacional; así como tamizajes y diagnósticos para trabajadores ó público en general.</string>
    <string name="nos_historia_titulo">Nuestra Historia</string>
    <string name="nos_info">Ofrecemos servicios de salud ocupacional a empresas</string>
    <string name="nos_titulo">Servicios de Salud Laboral / Ocupacional</string>


    <string name="rodolfo_de_la_o">Rodolfo de la O</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="correo_a01366363_tec_mx">Correo: A01366363@tec.mx</string>
    <string name="saldo_3669_00">Saldo: $ 3669.00</string>
    <string name="RECTANGULO">TODO</string>
    <string name="comprar">COMPRAR</string>
    <string name="historial">HISTORIAL</string>


    <string name="first_fragment_label"> Registro de Usuario </string>
    <string name="second_fragment_label"> Creación de Cuenta </string>
    <string name="title_first_page">Cuentanos sobre ti</string>
    <string name="title_personal_information">Información Personal</string>
    <string name="field_name_label">Nombre</string>
    <string name="field_last_name_label">Apellido Paterno</string>
    <string name="field_mother_last_name_label">Apellido Materno</string>
    <string name="birth_date_label">Fecha de Nacimiento</string>
    <string name="day_label">Día</string>
    <string name="title_birth_date">¿Cuando Naciste?</string>
    <string name="month_label">Mes</string>
    <string name="year_label">Año</string>
    <string name="gender_label">Genero</string>
    <string name="male_label">Masculino</string>
    <string name="female_label">Femenino</string>
    <string name="no_binary_label">No binario</string>
    <string name="continue_label">Continuar</string>
    <string name="title_second_form">¡Hola %1$s, vamos a crear tu cuenta!</string>
    <string name="title_login">Informacion de Inicio de Sesion</string>
    <string name="username_label">Nombre de Usuario</string>
    <string name="password_label">Contraseña</string>
    <string name="email_label">Correo Electronico</string>

    <string name="day_error">Día Inválido</string>
    <string name="month_error">Mes Inválido</string>
    <string name="year_error">Año Inválido</string>
    <string name="mail_error">Correo Inválido</string>
    <string name="username_error">Nombre de usuario sin espacios</string>

    <string name="password_description1">Recuerda que debe tener:</string>
    <string name="password_description2">- Letras minusculas</string>
    <string name="password_description3">- Letras MAYUSCULAS</string>
    <string name="password_description4">- Caracteres Especiales (# $ % @ _ /)</string>
    <string name="password_description5">- Digitos</string>
    <string name="privacy_label">Acepto el Aviso de Privacidad</string>
    <string name="terms_label">Acepto los Terminos y Condiciones</string>
    <string name="create_account_button_label">Crear Mi Cuenta</string>
    <string name="return_label">Regresar</string>
    <string name="to_login_label"> Ir a Inicio de Sesión</string>

    <string name="password_description_1_5">- Al menos 8 caracteres</string>
    <string name="account_instructions_label">Ya puedes iniciar sesion con tu usuario y contraseña</string>
    <string name="account_created_label">¡Felicidades, tu cuenta se ha creado con exito!</string>
    <string name="login_title">Inicio de Sesión</string>
    <string name="new_account_ad">¿No tienes una cuenta?</string>
    <string name="create_email_with_mail_label">Registrarme con correo electrónico</string>
    <string name="log_in_button">Ingresar</string>
    <string name="tf_logo_description">TestFarma Description</string>
    <string name="hello_message_label">Hola de nuevo, %1$s</string>


    <string name="phone">Phone</string>
    <string name="testfarma">Testfarma</string>
    <string name="mail">Mail</string>
    <string name="instagram">Instagram</string>
    <string name="Instagram">testfarma.mx</string>
    <string name="twitter">Twitter</string>
    <string name="Twitter">Cuenta en construccion</string>
    <string name="facebook">FaceBook</string>
    <string name="Facebook">Cuenta en construccion</string>
    <string name="Mail">info@testfarma.com.mx</string>
    <string name="Phone">+55 7081 7720</string>
    <string name="contact_title">Nuestras Redes Sociales</string>
    <string name="contact_label">Contacto</string>


    <string name="reset_password_label">¿Olvidaste tu contraseña?</string>
    <string name="reset_password_button_label">Recuperar contraseña</string>
    <string name="continue_pop_up_button">Continuar</string>
    <string name="pop_up_label_message">Si tu direccion de correo es correcta te enviaremos un enlace para que puedas volver a iniciar sesion</string>
    <string name="log_out_label">Cerrar Sesion</string>
    <string name="forgot_password_title">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_message">¡No te preocupes, te tenemos cubierto!</string>
    <string name="meeting_title_text">¿Necesitas una Cita?</string>
    <string name="meetings_message">¡Estas en el lugar correcto!</string>
    <string name="check_availability_label">Checar disponibilidad</string>
    <string name="studies_list_title">Catalogo de Estudios</string>

    <string name="study_price"> $ %1$d M.N </string>
    <string name="study_reqs_label">Requerimientos:</string>
    <string name="error_database_data">Sin datos para mostrar</string>

    <string name="email_chooser"> Elije una app para mandar el correo… </string>
    <string name="email_recipient_studies"> info@testfarma.com.mx </string>
    <string name="email_subject_studies">Informacion sobre Producto desde la App TestFarma</string>
    <string name="email_message_studies">

        Hola, buen dia\n\n

        Mi nombre es %1$s y quisiera buscar informacion sobre el producto "<i>%2$s</i>"\n\n\n


        Muchas gracias.

    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_studies_title">Mis Estudios</string>
    <string name="nutritional_receipt_title">Nuestras Recetas Nutricionales</string>
    <string name="nutritional_receipt_subtitle">Nosotros ponemos los ingredientes magicos,\n ¡Tu lo pones en marcha!</string>
    <string name="receipts_catalog_label">Nuestras Recetas</string>
    <string name="preparation_mode_text">Modo de Preparacion</string>
    <string name="consumption_mode_text">Modo de Consumo</string>
    <string name="next_metting_label">Proxima Cita</string>
    <string name="promotions_label">Checa nuestras ultimas promociones</string>
    <string name="error_doctor_main_menu">Sin informacion disponible</string>
    <string name="update_label">Actualizar</string>
    <string name="error_label_text">ERROR</string>
    <string name="updated_user_data_title">Mi Perfil</string>
    <string name="updated_user_data_message">¡La informacion de tu perfil ha sido actualizada con exito!</string>
    <string name="ok_label">Ententido</string>
    <string name="more_info_label">Más Información</string>

</resources>