<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_inicio"
            android:fontFamily="@font/montserrat_semibold"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_nosotros"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="28sp"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_misdatos"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="28sp"/>
        <item
            android:id="@+id/configuracion_perfil"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_config"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="28sp" />

        <item
            android:id="@+id/contacto"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/contact_label"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="28sp" />


        <!-- Para crear mas ubicaciones se debe tener el mismo nombre de item aqui y en el nav graph-->

    </group>
</menu>