<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".contacto">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="306dp"
        android:layout_height="208dp"
        app:layout_constraintBottom_toTopOf="@id/social_network_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_logo"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/Phone"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@id/phone_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/phone_logo"
        app:layout_constraintBottom_toBottomOf="@id/phone_logo"
        />

    <TextView
        android:id="@+id/mail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mail"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@id/mail_logo"
        app:layout_constraintTop_toTopOf="@id/mail_logo"
        app:layout_constraintBottom_toBottomOf="@id/mail_logo"
        app:layout_constraintEnd_toStartOf="@id/phone_logo"
        />

    <ImageView
        android:id="@+id/instagram_logo"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/instagram"
        app:layout_constraintStart_toStartOf="@id/social_network_title"
        app:layout_constraintTop_toBottomOf="@id/twitter_logo"
        app:layout_constraintEnd_toStartOf="@id/instagram_text"
        app:srcCompat="@drawable/ic_instagram" />

    <ImageView
        android:id="@+id/mail_logo"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instagram_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_email" />

    <ImageView
        android:id="@+id/twitter_logo"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/twitter"
        app:layout_constraintStart_toStartOf="@id/social_network_title"
        app:layout_constraintTop_toBottomOf="@id/facebook_logo"
        app:layout_constraintEnd_toStartOf="@id/twitter_text"
        app:srcCompat="@drawable/ic_twitter" />

    <ImageView
        android:id="@+id/phone_logo"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:contentDescription="@string/phone"
        app:layout_constraintBottom_toBottomOf="@id/mail_logo"
        app:layout_constraintEnd_toStartOf="@id/phone_number_text"
        app:layout_constraintStart_toEndOf="@id/mail_text"
        android:src="@drawable/ic_whatsapp"/>

    <ImageView
        android:id="@+id/facebook_logo"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/facebook"
        app:layout_constraintStart_toStartOf="@id/social_network_title"
        app:layout_constraintTop_toBottomOf="@id/social_network_title"
        app:layout_constraintEnd_toStartOf="@id/facebook_text"
        app:srcCompat="@drawable/ic_facebook" />

    <ImageView
        android:id="@+id/tf_logo"
        android:layout_width="310dp"
        android:layout_height="46dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/testfarma"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tf" />

    <TextView
        android:id="@+id/facebook_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Facebook"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintBottom_toBottomOf="@id/facebook_logo"
        app:layout_constraintEnd_toEndOf="@id/social_network_title"
        app:layout_constraintStart_toEndOf="@id/facebook_logo"
        app:layout_constraintTop_toTopOf="@id/facebook_logo" />

    <TextView
        android:id="@+id/twitter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Twitter"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintStart_toEndOf="@id/twitter_logo"
        app:layout_constraintTop_toTopOf="@id/twitter_logo"
        app:layout_constraintBottom_toBottomOf="@id/twitter_logo"
        app:layout_constraintEnd_toEndOf="@id/social_network_title" />

    <TextView
        android:id="@+id/instagram_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintStart_toEndOf="@id/instagram_logo"
        app:layout_constraintEnd_toEndOf="@id/social_network_title"
        app:layout_constraintTop_toTopOf="@id/instagram_logo"
        app:layout_constraintBottom_toBottomOf="@id/instagram_logo"
        android:text="@string/Instagram" />

    <TextView
        android:id="@+id/social_network_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:text="@string/contact_title"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

</androidx.constraintlayout.widget.ConstraintLayout>