<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondFormFragment">

        <TextView
            android:id="@+id/title_second_form"
            style="@style/Widget.TestFarma.TextView"
            android:layout_width="300dp"
            android:layout_height="114dp"
            android:text="@string/title_second_form"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textFontWeight="800"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/title_login_information"
            style="@style/Widget.TestFarma.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textSize="19sp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginTop="15dp"
            android:layout_marginStart="18dp"
            app:layout_constraintTop_toBottomOf="@id/title_second_form"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_email"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="14dp"
            android:hint="@string/email_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_login_information">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_email_edit"
                android:layout_width="280dp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_username"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:hint="@string/username_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_username_edit"
                android:layout_width="280dp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_password"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="14dp"
            android:hint="@string/password_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_password_edit"
                android:layout_width="280dp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/password_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_password"
            android:text="@string/password_description1"
            />

        <TextView
            android:id="@+id/password_description_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_description_title"
            android:text="@string/password_description_1_5"/>

        <TextView
            android:id="@+id/password_description_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_description_title_1"
            android:text="@string/password_description2"
            />

        <TextView
            android:id="@+id/password_description_title_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_description_title_2"
            android:text="@string/password_description3"
            />

        <TextView
            android:id="@+id/password_description_title_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_description_title_3"
            android:text="@string/password_description4"
            />

        <TextView
            android:id="@+id/password_description_title_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_description_title_4"
            android:text="@string/password_description5"
            />

        <CheckBox
            android:id="@+id/privacy_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/privacy_label"
            android:fontFamily="@font/montserrat_regular"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_description_title_5"/>

        <CheckBox
            android:id="@+id/terms_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="18dp"
            android:text="@string/terms_label"
            android:fontFamily="@font/montserrat_regular"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/privacy_checkbox"/>

        <Button
            android:id="@+id/button_create_account"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/create_account_button_label"
            android:fontFamily="@font/montserrat_regular"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terms_checkbox" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>