<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".AccountSuccessCreation">

    <ImageView
        android:id="@+id/success_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_creation_success"
        app:tint="@color/green"
        tools:srcCompat="@drawable/ic_account_creation_success"
        android:contentDescription="Check Icon" />

    <TextView
        android:id="@+id/account_success_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/account_created_label"
        app:layout_constraintTop_toBottomOf="@id/success_icon"
        app:layout_constraintStart_toStartOf="@id/success_icon"
        app:layout_constraintEnd_toEndOf="@id/success_icon"/>

    <TextView
        android:id="@+id/account_instructions_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/account_instructions_label"
        app:layout_constraintTop_toBottomOf="@id/account_success_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_to_login"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/to_login_label"
        android:shadowColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/account_instructions_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>